tests/pat-not-cons-type/out.txt
error: pattern does not have a constructor type: (('t25) * (('t25) list)) -> (('t25) list)
  ┌─ err.sml:1:12
  │
1 │ val _ = fn op:: => 3
  │            ^^^^

typechecking failed
